<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"    
    >

    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
		   	<LinearLayout 
		   		    android:layout_width="match_parent"
		   		    android:layout_height="wrap_content"
		   		    android:padding="@dimen/M_edittext"
		   		    android:orientation="vertical"
		   		    android:background="@color/blanco"
		   		    >
		   		    <TextView 
		   		        android:layout_width="match_parent"
		   		        android:layout_height="wrap_content"
		   		        android:text="@string/subFun_razon"
		   		        />
					<EditText
				        android:id="@+id/regFun_txtRazon"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:textAppearance="?android:attr/textAppearanceLarge"
				        android:minHeight="@dimen/minH_descripcion"
				        android:layout_margin="@dimen/M_edittext"
				        android:textColor="@color/col_words"
				        android:textColorHint="@color/col_hint"
				        android:hint="@string/chars_114"/>
		   	</LinearLayout>
		   	
		   	<LinearLayout 
		   		    android:layout_width="match_parent"
		   		    android:layout_height="wrap_content"
		   		    android:padding="@dimen/M_edittext"
		   		    android:orientation="vertical"
		   		    android:background="@color/blanco"
		   		    android:layout_marginTop="@dimen/M_edittext"
		   		    >
		   		    <TextView 
		   		        android:layout_width="match_parent"
		   		        android:layout_height="wrap_content"
		   		        android:text="@string/subEvt_descripcion"
		   		        />
					<EditText
				        android:id="@+id/regFun_txtdescripcion"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:textAppearance="?android:attr/textAppearanceLarge"
				        android:minHeight="@dimen/minH_descripcion"
				        android:layout_margin="@dimen/M_edittext"
				        android:textColorHint="@color/col_hint"
				        android:textColor="@color/col_words"
				        android:hint="@string/chars_descripcion"/>
		   	</LinearLayout>
	   	<LinearLayout 
	   		    android:layout_width="match_parent"
	   		    android:layout_height="wrap_content"
	   		    android:padding="@dimen/M_edittext"
	   		    android:orientation="vertical"
	   		    android:background="@color/blanco"
	   		    android:layout_marginTop="@dimen/M_edittext"
	   		    >
	   		    <TextView 
	   		        android:layout_width="match_parent"
	   		        android:layout_height="wrap_content"
	   		        android:text="@string/subFun_representante"
	   		        />
				<EditText
			        android:id="@+id/regFun_txtrepresentante"
			        android:layout_width="match_parent"
			        android:textColor="@color/col_words"
			        android:layout_height="wrap_content"
			        android:textAppearance="?android:attr/textAppearanceLarge"
			        android:layout_margin="@dimen/M_edittext"
			        android:textColorHint="@color/col_hint"
			        android:hint="@string/chars_60"/>
	   	</LinearLayout>
	   	
	   	<LinearLayout 
	   		    android:layout_width="match_parent"
	   		    android:layout_height="wrap_content"
	   		    android:padding="@dimen/M_edittext"
	   		    android:orientation="vertical"
	   		    android:background="@color/blanco"
	   		    android:layout_marginTop="@dimen/M_edittext"
	   		    >
	   		    <TextView 
	   		        android:layout_width="match_parent"
	   		        android:layout_height="wrap_content"
	   		        android:text="@string/subFun_ccrepresentante"
	   		        />
				<EditText
			        android:id="@+id/regFun_txtCcRepresentante"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textAppearance="?android:attr/textAppearanceLarge"
			        android:maxLines="1"
			        android:inputType="number"
			        android:textColor="@color/col_words"
			        android:singleLine="true"
			        android:textColorHint="@color/col_hint"
			        android:layout_margin="@dimen/M_edittext"
			        android:hint="@string/chars_ids"/>
	   	</LinearLayout>
	   	
	   	<LinearLayout 
	   		    android:layout_width="match_parent"
	   		    android:layout_height="wrap_content"
	   		    android:padding="@dimen/M_edittext"
	   		    android:orientation="vertical"
	   		    android:background="@color/blanco"
	   		    android:layout_marginTop="@dimen/M_edittext"
	   		    >
	   		    <TextView 
	   		        android:layout_width="match_parent"
	   		        android:layout_height="wrap_content"
	   		        android:text="@string/subFun_email"
	   		        />
				<EditText
			        android:id="@+id/regFun_txtemail"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:maxLines="1"
			        android:textColor="@color/col_words"
			        android:inputType="textWebEmailAddress"
			        android:singleLine="true"
			        android:textColorHint="@color/col_hint"
			        android:layout_margin="@dimen/M_edittext"
			        android:hint="@string/chars_60"/>
	   	</LinearLayout>
	   	
		   	<LinearLayout 
		   		    android:layout_width="match_parent"
		   		    android:layout_height="wrap_content"
		   		    android:padding="@dimen/M_edittext"
		   		    android:orientation="vertical"
		   		    android:background="@color/blanco"
		   		    android:layout_marginTop="@dimen/M_edittext"
		   		    >
		   		    <TextView 
		   		        android:layout_width="match_parent"
		   		        android:layout_height="wrap_content"
		   		        android:text="@string/reg_password"
		   		        />
		   		    <LinearLayout 
		   		        android:layout_width="match_parent"
		   		        android:layout_height="wrap_content"
		   		        android:orientation="vertical"
		   		        android:layout_margin="@dimen/M_edittext"
		   		        >
					    <EditText
					        android:id="@+id/regFun_txtPassword"       
					        android:layout_width="fill_parent"
					        android:layout_height="wrap_content"
					        android:textAppearance="?android:attr/textAppearanceMedium" 
					        android:hint="@string/reg_password"
        					android:inputType="textPassword"
        					android:textColorHint="@color/col_hint"
        					android:textColor="@color/col_words"
					        />
					    <EditText
					        android:id="@+id/regFun_txtReplayPassword"     
					        android:layout_width="fill_parent"
					        android:textColor="@color/col_words"
					        android:layout_height="wrap_content"
					        android:textAppearance="?android:attr/textAppearanceMedium"
					        android:hint="@string/reg_passwordReplay"
					        android:inputType="textPassword"
					        android:textColorHint="@color/col_hint"
					        />
		   		    </LinearLayout>
		   	</LinearLayout>
		   	
<LinearLayout 
		   		    android:layout_width="match_parent"
		   		    android:layout_height="wrap_content"
		   		    android:padding="@dimen/M_edittext"
		   		    android:orientation="vertical"
		   		    android:background="@color/blanco"
		   		    android:layout_marginTop="@dimen/M_edittext"
		   		    >
		   		    <LinearLayout 
		   		        android:layout_width="match_parent"
		   		        android:layout_height="wrap_content"
		   		        android:orientation="vertical"
		   		        android:layout_margin="@dimen/M_edittext"
		   		        >
						<CheckBox
						    android:id="@+id/regFun_checkTerminos"
			   		        android:layout_width="match_parent"
			   		        android:layout_height="@dimen/min_terminos"
			   		        android:text="@string/aceptarTerminos"
			   		        android:textSize="@dimen/font_media"
			   		        android:textColor="@color/col_words"
			   		        />
						<Button
						    android:id="@+id/regFun_btnTerminos"
			   		        android:layout_width="match_parent"
			   		        android:layout_height="wrap_content"
						    android:text="@string/verTerminos"
						    android:background="@drawable/sel_terminos"
						    android:textSize="@dimen/font_peque"
						    android:textColor="@color/col_words"
						    />
		   		    </LinearLayout>
		   	</LinearLayout>
        </LinearLayout>
    </ScrollView>
    
    
</LinearLayout>
