<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_fondolineas"
    android:padding="@dimen/P_app">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ScrollView
            android:id="@+id/fragEnc_scrollV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="65"
            >
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    >
	            <RelativeLayout 
	                android:layout_width="match_parent"
	                android:layout_height="@dimen/H_imagenes_subir"
	                >
	                <sas.buxtar.movil.heroican.process.RecyclingImageView
	                    android:id="@+id/fragEnc_img"
	                    android:layout_width="match_parent"
	                    android:layout_height="match_parent"
	                    android:scaleType="centerCrop"
	                    android:src="@drawable/empty_photo"
	                    android:contentDescription="@string/imagen_mascota"
	                    />
	                <LinearLayout 
	                    android:layout_width="match_parent"
	                    android:layout_height="match_parent"
	                    android:orientation="vertical"
	                    >
	                    <LinearLayout 
	                        android:layout_width="match_parent"
	                        android:layout_height="0dp"
	                        android:layout_weight="75"/>
	                    <LinearLayout
	                        android:layout_width="match_parent"
	                        android:layout_height="0dp"
	                        android:layout_weight="25"
	                        android:orientation="horizontal"
	                        android:gravity="right|center_vertical"
	                        android:background="@drawable/shape_card"
	                        >
	                        <ImageView
	                            android:id="@+id/fragEnc_galeria"
	                            android:src="@drawable/ic_galeria"
	                            android:layout_width="@dimen/H_buttons"
	                            android:layout_height="@dimen/H_buttons"
	                            android:padding="@dimen/P_buttons"
	                            android:layout_marginRight="@dimen/MR_gallery"
	                            />
	                        <ImageView
	                            android:id="@+id/fragEnc_camara"
	                            android:layout_width="@dimen/H_buttons"
	                            android:layout_height="@dimen/H_buttons"
	                            android:padding="@dimen/P_buttons"
	                            android:src="@drawable/ic_camarablanca"
	                            />
	                    </LinearLayout>
	                </LinearLayout>
	            </RelativeLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    >
	        <TextView 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:padding="@dimen/M_edittext"
	            android:text="@string/incentivo"
	            />
		   			   	<LinearLayout 
		   		    android:layout_width="match_parent"
		   		    android:layout_height="wrap_content"
		   		    android:padding="@dimen/M_edittext"
		   		    android:orientation="horizontal"
		   		    android:background="@color/blanco"
		   		    android:layout_marginTop="@dimen/M_edittext"
		   		    android:gravity="center_vertical"
		   		    >
		   		    <TextView
		   		        android:id="@+id/fragEnc_txtMap"
		   		        android:layout_width="0dp"
		   		        android:layout_weight="90"
		   		        android:layout_height="wrap_content"
		   		        android:text="@string/donde_loviste"
		   		        />
				  <ImageView
				        android:id="@+id/fragEnc_map"
	                    android:layout_width="@dimen/H_buttons"
	                    android:layout_height="@dimen/H_buttons"
				        android:src="@drawable/ic_loc"
				        android:padding="2dp"
				        android:contentDescription="@string/imagen_mapa"
				        android:background="@drawable/selector_map2"
				        />
		   	</LinearLayout>
		   	
		   	<LinearLayout 
		   		    android:layout_width="match_parent"
		   		    android:layout_height="wrap_content"
		   		    android:padding="@dimen/M_edittext"
		   		    android:orientation="vertical"
		   		    android:background="@color/blanco"
		   		    android:layout_marginTop="@dimen/M_edittext"
		   		    >
		   		    <TextView 
		   		        android:layout_width="match_parent"
		   		        android:layout_height="wrap_content"
		   		        android:text="@string/subEvt_contacto"
		   		        />
					<EditText
				        android:id="@+id/fragEnc_contacto"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:textAppearance="?android:attr/textAppearanceLarge"
				        android:layout_margin="@dimen/M_edittext"
				        android:textColor="@color/col_words"
				        android:hint="@string/chars_114"
				        android:textColorHint="@color/col_hint"/>
		   	</LinearLayout>
		   	
			<TextView 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:padding="@dimen/M_edittext"
	            android:text="@string/opcional"
	            />
		   	
		   	<LinearLayout 
		   		    android:layout_width="match_parent"
		   		    android:layout_height="wrap_content"
		   		    android:padding="@dimen/M_edittext"
		   		    android:orientation="vertical"
		   		    android:background="@color/blanco"
		   		    android:layout_marginTop="@dimen/M_edittext"
		   		    >
		   		    <TextView
		   		        android:id="@+id/fragEnc_txtTamano"
		   		        android:layout_width="match_parent"
		   		        android:layout_height="wrap_content"
		   		        android:text="@string/subMas_tamano"
		   		        />
				  <Spinner
				        android:id="@+id/fragEnc_SpinTamano"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        />
		   	</LinearLayout>
		   	
			<LinearLayout 
		   		    android:layout_width="match_parent"
		   		    android:layout_height="wrap_content"
		   		    android:padding="@dimen/M_edittext"
		   		    android:orientation="vertical"
		   		    android:background="@color/blanco"
		   		    android:layout_marginTop="@dimen/M_edittext"
		   		    >
		   		    <TextView
		   		        android:id="@+id/fragEnc_txtSexo"
		   		        android:layout_width="match_parent"
		   		        android:layout_height="wrap_content"
		   		        android:text="@string/subMas_sexo"
		   		        />
				  <Spinner
				        android:id="@+id/fragEnc_SpinSexo"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        />
		   	</LinearLayout>
		   	
		   	<LinearLayout 
		   		    android:layout_width="match_parent"
		   		    android:layout_height="wrap_content"
		   		    android:padding="@dimen/M_edittext"
		   		    android:orientation="vertical"
		   		    android:background="@color/blanco"
		   		    android:layout_marginTop="@dimen/M_edittext"
		   		    >
		   		    <TextView
		   		        android:id="@+id/fragEnc_txtRaza"
		   		        android:layout_width="match_parent"
		   		        android:layout_height="wrap_content"
		   		        android:text="@string/subMas_raza"
		   		        />
				  <Spinner
				        android:id="@+id/fragEnc_SpinRaza"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        />
		   	</LinearLayout>
		   	
		   	<LinearLayout 
		   		    android:layout_width="match_parent"
		   		    android:layout_height="wrap_content"
		   		    android:padding="@dimen/M_edittext"
		   		    android:orientation="vertical"
		   		    android:background="@color/blanco"
		   		    android:layout_marginTop="@dimen/M_edittext"
		   		    >
		   		    <TextView
		   		        android:id="@+id/fragEnc_txtEdad"
		   		        android:layout_width="match_parent"
		   		        android:layout_height="wrap_content"
		   		        android:text="@string/subMas_edad"
		   		        />
				  <Spinner
				        android:id="@+id/fragEnc_SpinEdad"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        />
		   	</LinearLayout>
			
		   	<LinearLayout 
		   		    android:layout_width="match_parent"
		   		    android:layout_height="wrap_content"
		   		    android:padding="@dimen/M_edittext"
		   		    android:orientation="vertical"
		   		    android:background="@color/blanco"
		   		    android:layout_marginTop="@dimen/M_edittext"
		   		    >
		   		    <TextView 
		   		        android:layout_width="match_parent"
		   		        android:layout_height="wrap_content"
		   		        android:text="@string/subEvt_caracateristicas"
		   		        />
					<EditText
				        android:id="@+id/fragEnc_descripcion"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:textAppearance="?android:attr/textAppearanceLarge"
				        android:layout_margin="@dimen/M_edittext"
				        android:hint="@string/chars_descripcion"
				        android:textColor="@color/col_words"
				        android:textColorHint="@color/col_hint"/>
		   	</LinearLayout>

		   	<LinearLayout 
		   	    android:id="@+id/selback"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:background="@color/app_color"
		   	    android:layout_marginTop="@dimen/M_edittext"
		   	    >		   	
				<Button 
				    android:id="@+id/fragEnc_guardar"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:text="@string/subEvt_guardar"
				    android:background="@drawable/selector"
				    android:textColor="@color/blanco"
				    />
			</LinearLayout>

		</LinearLayout>
			</LinearLayout>
        </ScrollView>
        
    </LinearLayout>
    

</LinearLayout>